# data-workspace

./: .gitignore  CODEOWNERS  README.md  eleventy.config.js  package-lock.json  package.json  requirements-docs.txt  sagemaker.tf  sagemaker_gpt_neo-125m.tf
infra/modules/: .bumpversion.toml  Makefile  README.md  pyproject.toml
infra/modules/autoscaling/sagemaker/: main.tf  outputs.tf  variables.tf
infra/modules/cloudwatch_alarm/: main.tf  variables.tf
infra/modules/cloudwatch_alarm/sagemaker/: main.tf  outputs.tf  (+1 more)
infra/modules/codebuild_ecs_deploy/: main.tf
infra/modules/lambda/: index.py  main.tf  outputs.tf  variables.tf
infra/modules/lambda_layers/: main.tf  outputs.tf  variables.tf
infra/modules/logs/: main.tf  outputs.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf  variables.tf
infra/modules/sagemaker_deployment/: cloudwatch.tf  cloudwatch_alarms.tf  index.py  lambda.tf  lambda_function.py  main.tf  outputs.tf  sns.tf  variables.tf
infra/modules/sagemaker_endpoint/: main.tf  outputs.tf  variables.tf
infra/modules/sagemaker_jumpstart/: main.tf
infra/modules/sagemaker_model/: main.tf  outputs.tf  variables.tf
infra/modules/sagemaker_output/: main.tf  outputs.tf
infra/modules/sagemaker_output_mover/: main.tf  outputs.tf  variables.tf
infra/modules/security_group_client_server_connections/: main.tf
infra/modules/sns/: main.tf  outputs.tf  variables.tf
infra/modules/store_inferences/: main.tf  variables.tf
infra/modules/store_sagemaker_invokes/: db.tf  lambda.tf  main.tf  variables.tf
infra/modules/test_resources/: main.tf
(+301 files in other folders)
