[project]
name = "lambda_functions"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["boto3", "boto3-stubs[s3]"]

[tool.uv]
dev-dependencies = ["bump-my-version", "ruff", "mypy"]

[tool.mypy]
pretty = true
strict = true
show_error_codes = true
warn_unreachable = true

[tool.ruff.lint]
select = ["A", "B", "BLE", "E", "ERA", "F", "I", "RUF", "T", "T10", "T20", "W"]
